--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:zcnA1DRiMif2heunleI1Ck7vFVYmeS4QwiryKiYA4vg=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -8,12 +8,12 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
+DB_PORT=5432
+DB_DATABASE=sandbox
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=e1k5FSYa4u1p
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
